--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -8,8 +8,11 @@
     "navigation_profile": "我的",
     "submit": "提交",
     "cancel": "取消",
+    "start": "开始",
+    "confirm": "确定",
     "back": "返回",
     "next": "下一步",
+    "skip": "跳过",
     "loading": "加载中...",
     "no_data": "暂无数据",
     "no_more_data": "没有更多数据了",
@@ -44,5 +47,12 @@
     "validator_username": "用户名必须在6 ~ 18位之间",
     "validator_password": "密码长度必须在6 ~ 18位之间",
     "validator_email": "邮箱格式不正确",
-    "validator_length": "字符长度必须在3 ~ 18位之间"
+    "validator_length": "字符长度必须在3 ~ 18位之间",
+
+    "welcomeOneTitle": "选择你想要的产品",
+    "welcomeOneDesc": "多快好省，购物更轻松",
+    "welcomeTwoTitle": "轻松shopping",
+    "welcomeTwoDesc": "多快好省，购物更轻松",
+    "welcomeThreeTitle": "快乐生活",
+    "welcomeThreeDesc": "多快好省，购物更轻松"
 }
