--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -54,5 +54,16 @@
     "welcomeTwoTitle": "轻松shopping",
     "welcomeTwoDesc": "多快好省，购物更轻松",
     "welcomeThreeTitle": "快乐生活",
-    "welcomeThreeDesc": "多快好省，购物更轻松"
+    "welcomeThreeDesc": "多快好省，购物更轻松",
+
+    "my_page_likes": "喜欢",
+    "my_page_favorites": "收藏夹",
+    "my_page_receipt": "收据",
+    "my_page_orders": "订单",
+    "my_page_personal_data": "个人资料",
+    "my_page_invoice_address": "发票地址",
+    "my_page_shipping_address": "收货地址",
+    "my_page_language": "语言",
+    "my_page_theme": "主题",
+    "my_page_logout": "注销"
 }
