添加版号翻译

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -67,6 +67,7 @@
     "my_page_language": "language",
     "my_page_theme": "theme",
     "my_page_logout": "logout",
+    "current_version": "current version",
 
     "theme_page_title": "setting theme",
     "theme_page_system": "system",
