--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -7,6 +7,8 @@
     "navigation_cart": "购物车",
     "navigation_profile": "我的",
     "submit": "提交",
+    "edit": "编辑",
+    "save": "保存",
     "cancel": "取消",
     "start": "开始",
     "confirm": "确定",
@@ -42,12 +44,17 @@
     "register_pin_success": "注册成功",
     "register_pin_fail": "注册失败",
 
+    "edit_passowrd_old": "旧密码",
+    "edit_passowrd_new": "新密码",
+    "edit_passowrd_new_confirm": "确认新密码",
 
     "validator_required": "不能为空",
     "validator_username": "用户名必须在6 ~ 18位之间",
     "validator_password": "密码长度必须在6 ~ 18位之间",
     "validator_email": "邮箱格式不正确",
     "validator_length": "字符长度必须在3 ~ 18位之间",
+    "validator_skip": "不输入表示不修改此项",
+    "validator_confirm_password": "两次输入的密码不一致",
 
     "welcomeOneTitle": "选择你想要的产品",
     "welcomeOneDesc": "多快好省，购物更轻松",
